tests/fixtures/invalid/int_bitor_float.py
# Cannot bitwise OR Int and Float
x: float = 1 | 1.0
